--- a/main.html
+++ b/main.html
@@ -7,8 +7,82 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table style="width: 100%; height: 100%">
+    <table style="width: 100%; height: 100%" border="1">
       <!-- Your code here -->
+		<tr>
+			<td>
+			<table border="1" width="100%">
+				<tr>
+				<thead>
+					<th colspan="2">
+					Nested Table 2
+					</th>
+				</thead>
+				</tr>
+				<tr>
+					<th>Column 1</th>
+					<th>Column 1</th>
+				</tr>
+				<tr>
+					<td style="text-align:center">abc</td>
+					<td style="text-align:center">def</td>
+				</tr>
+			</table>
+            </td>
+			
+			<td>
+				<table border="1" width="100%">
+				   <tr>
+					   <thead>
+						   <th>
+						   Nested Table 1
+						   </th>
+					   </thead>
+				   </tr>
+					<tr>
+						<td>
+							<ul>
+								<li>List item</li>
+								<li>List item</li>
+								<li>List item</li>
+							</ul>
+						</td>
+					</tr>
+					
+				</table>
+			</td>
+		</tr>
+
+		<tr>
+			<td>
+				<table border="1" width="100%">
+					<tr>
+					  <thead>
+					    <th colspan="2">Nested Table 3</th>
+					  </thead>
+					</tr>
+					<tr>
+						<td style="text-align:center; text-decoration:underline; color:purple">Nested Table </td>
+						<td style="text-align:center">Demo Continued</td>
+					</tr>
+				</table>
+			</td>
+
+			<td>
+				<table border="1" width="100%">
+					<tr>
+					  <thead>
+						  <th>Nested Table 4</th>
+					  </thead>
+					</tr>
+					<tr>
+						<td style="background-color:black; color:white; text-align:center">
+							HTML
+						</td>
+					</tr>
+				</table>
+			</td>
+		</tr>
     </table>
   </body>
 </html>
